# rack-director

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: pull_request.yml
agent-image/: Dockerfile  agent.repo  build-agent.sh  rack-agent.service
common/: Cargo.toml
common/src/: device_attributes.rs  disk_layout.rs  firmware_mode.rs  lib.rs  poll_action.rs  subnet.rs
common/src/cnc/: mod.rs
default-osm/: manifest.toml
default-osm/almalinux-10/: OperatingSystem.toml  almalinux-x86_64.ks
default-osm/almalinux-10.1/: OperatingSystem.toml  almalinux-x86_64.ks
default-osm/centos-10/: OperatingSystem.toml  centos-10-amd64.ks
docker/: Dockerfile  agent.repo  build-agent.sh  build-director.sh  networkd-control.network  networkd-dhcp.network  networkd-rack.network  rack-agent-reboot.service  rack-agent.service  rack-agent.target  rack-director.service
docker/dracut-modules/99rack-agent/: module-setup.sh  rack-agent.service
docs/specs/: 2026-04-08-osm-file-format.md
docs/superpowers/specs/: 2026-04-04-add-pending-device-page.md
e2e-tests/: CLAUDE.md  disk-gpt-simple.toml  disk-lvm.toml  rocky-linux-10.1-ks.cfg
osm/: Cargo.toml
osm/src/: archive.rs  lib.rs  manifest.rs  os_config.rs  validation.rs
rack-agent/: CLAUDE.md  Cargo.toml
rack-agent/src/: bmc.rs  client.rs  console.rs  daemon.rs  main.rs  partition.rs  scan.rs
rack-director/: CLAUDE.md  Cargo.toml  build.rs
rack-director-osm/: Cargo.toml
rack-director-osm/src/: main.rs  validate.rs
rack-director-ui/: CLAUDE.md  DESIGN.md  DESIGN_GUIDE.md  index.html  package-lock.json  package.json
rack-director-ui/src/: Layout.tsx  index.css  main.tsx
rack-director-ui/src/components/: app-sidebar.tsx
rack-director-ui/src/components/devices/: BmcConfiguration.tsx  cancel-transition-dialog.tsx  device-warnings.tsx  devices-table-enhanced.tsx  devices-table.tsx  disk-label-overrides.tsx  editable-hostname.tsx  platform-assignment.tsx  power-controls.tsx  provision-dialog.tsx  seen-mac-input.tsx  transition-dialog.tsx
rack-director-ui/src/components/networks/: leases-table.tsx  make-static-dialog.tsx  networks-table.tsx  pool-dialog.tsx  pools-table-form.tsx  pools-table.tsx  reservations-table.tsx
rack-director-ui/src/hooks/: useFieldErrors.ts
rack-director-ui/src/lib/: client.ts  lifecycle-utils.ts
rack-director-ui/src/pages/: DeviceDetail.tsx  Devices.tsx  DevicesEnhanced.tsx  Index.tsx  Loading.tsx  NetworkDetail.tsx  NetworkNew.tsx  Networks.tsx  OperatingSystemEdit.tsx  OperatingSystemNew.tsx  OperatingSystems.tsx  OsmModuleDetail.tsx  OsmModules.tsx  OsmUpload.tsx  PendingDeviceNew.tsx  Plans.tsx  PlatformDetail.tsx  PlatformEdit.tsx  PlatformNew.tsx  Platforms.tsx  RoleEdit.tsx  RoleNew.tsx  Roles.tsx  Settings.tsx  Transitions.tsx
rack-director/src/: lib.rs  main.rs
rack-director/src/boot_files/: filesystem.rs  mod.rs
rack-director/src/database/: connection.rs  mod.rs
rack-director/src/database/migrations/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  23.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  migration_11.rs  migration_14.rs  migration_15.rs  migration_19.rs  migration_20.rs  mod.rs
rack-director/src/device_warnings/: mod.rs  store.rs
rack-director/src/dhcp/: allocator.rs  boot_config.rs  device_resolution.rs  handler.rs  interface.rs  ip_discovery.rs  message_builder.rs  mod.rs  request.rs  socket_manager.rs  store.rs  validation.rs
rack-director/src/director/: ipmi.rs  mod.rs  power_ops.rs  store.rs
rack-director/src/director/devices/: store.rs
rack-director/src/director/power/: ipmi.rs  mod.rs  ops.rs  redfish.rs
rack-director/src/disk_layout/: inject.rs  mod.rs  resolve.rs  validate.rs
rack-director/src/http/: api.rs  cnc.rs  error.rs  mod.rs  operating_systems_api.rs  roles_api.rs  test_helpers.rs  ui.rs
rack-director/src/http/api/: devices.rs  mod.rs  platforms.rs
rack-director/src/http/cnc/: CLAUDE.md  boot_files.rs  device_registration.rs  install_script.rs  ipxe_scripts.rs  mod.rs  network_processing.rs  osm_files.rs  poll.rs
rack-director/src/http/ui/: CLAUDE.md  devices.rs  dhcp.rs  mod.rs  networks.rs  operating_systems.rs  osm.rs  platforms.rs  power.rs  roles.rs  validation.rs
rack-director/src/lifecycle/: CLAUDE.md  mod.rs  store.rs
rack-director/src/operating_systems/: mod.rs  store.rs
rack-director/src/osm/: mod.rs  registry.rs  resolve.rs  store.rs  upload.rs
rack-director/src/plans/: mod.rs  store.rs
rack-director/src/plans/actions/: CLAUDE.md  boot_target.rs  mod.rs  params.rs
rack-director/src/roles/: mod.rs  store.rs
rack-director/src/storage/: local.rs  memory.rs  mod.rs  s3.rs
rack-director/src/templates/: mod.rs
rack-director/src/tftp/: connection.rs  mod.rs  options.rs  packet.rs  state.rs
rack-director/tests/: http_boot.rs  install_script.rs  integration_test.rs  pxe_boot.rs
rack-director/tests/common/: dhcp_client.rs  mod.rs  tftp_client.rs
rack-director/tests/fixtures/expected_scripts/: rhel10_bios_lvm.txt  rhel10_bios_simple.txt  rhel10_uefi_lvm.txt  rhel10_uefi_simple.txt  ubuntu2404_bios_lvm.txt  ubuntu2404_bios_simple.txt  ubuntu2404_uefi_lvm.txt  ubuntu2404_uefi_simple.txt
rack-director/tests/fixtures/install_scripts/: rhel10.ks  ubuntu2404.yaml
rack-director/tests/fixtures/tftp/: README.md  ipxe.efi  undionly.kpxe
rack-simulator/: CLAUDE.md  Cargo.toml
rack-simulator/src/: agent.rs  boot.rs  config.rs  dhcp.rs  hardware_profiles.rs  http.rs  main.rs  output.rs  server.rs  tftp.rs
rack-simulator/src/e2e/: agent_vm.rs  build.rs  config.rs  director.rs  lifecycle.rs  mod.rs  runner.rs
rack-simulator/src/vm/: qemu.rs
scripts/: devserver.sh  start.ps1
src/: main.rs
src/database/: mod.rs
src/database/migrations/: 1.sql  2.sql
src/dhcp/: mod.rs  option82.rs  packet.rs  pool.rs  server.rs  tests.rs
src/director/: mod.rs  store.rs
src/http/: cnc.rs  mod.rs  ui.rs
src/tftp/: mod.rs  packet.rs  state.rs
(+35 files in other folders)
