[workspace]
members = [ "common", "rack-agent",
    "rack-director",
    "rack-simulator",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = "0.10.1"
bytes = "1.9"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dhcproto = "0.14"
handlebars = "6.2"
log = { version = "0.4.27", features = ["kv"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11"
tempfile = "3.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "macros", "sync", "signal", "fs", "time", "io-util", "process"] }
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
