[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
mockito = "1.6.1"
tokio-test.workspace = true
