[package]
name = "rack-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
dmidecode = "1.0.0"
log.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
std-logger.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.13.0"
tokio-test.workspace = true
