[package]
name = "rack-director"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
common = { version = "0.1.0", path = "../common" }
dhcproto = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
std-logger = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
reqwest = "0.12"
tempfile = { workspace = true }
tftp_client = "0.1"
tokio-test = { workspace = true }
tower = { workspace = true }
