[package]
name = "rack-director"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
common = { version = "0.1.0", path = "../common" }
dhcproto = { workspace = true }
futures = "0.3"
handlebars = { workspace = true }
log = { workspace = true }
network-interface = { workspace = true }
rand = "0.8"
rusqlite = { workspace = true, features = ["uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-recvmsg = { workspace = true }
uuid = { version = "1.20.0", features = ["serde"] }
object_store = { version = "0.13.1", features = ["aws"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
stdext = "0.3.3"
tempfile = { workspace = true }
tftp_client = "0.1"
tokio-test = { workspace = true }
tower = { workspace = true }
