[package]
name = "rack-simulator"
version = "0.1.0"
edition = "2024"
description = "CLI tool to simulate server behavior for testing Rack Director"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
dhcproto = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
rand = "0.8"
tempfile = { workspace = true }
